添加环境变量支持以覆盖密钥属性
- 在 build.gradle 中添加逻辑，如果环境变量存在，则覆盖 key.properties 中的 storePassword 和 keyPassword 值
- 更新 key.properties 文件，确保 storeFile 行末有换行符

--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -26,6 +26,14 @@ def keystorePropertiesFile = rootProject.file("key.properties")
 def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
+// 如果环境变量存在，则覆盖 key.properties 中的值
+if (System.getenv('KEYSTORE_PASSWORD')) {
+    keystoreProperties['storePassword'] = System.getenv('KEYSTORE_PASSWORD')
+}
+if (System.getenv('KEY_PASSWORD')) {
+    keystoreProperties['keyPassword'] = System.getenv('KEY_PASSWORD')
+}
+
 android {
     namespace 'com.nn.nnbdc'
     compileSdk = 35
