--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,10 @@ jobs:
     runs-on: ${{ matrix.platform == 'windows' && 'windows-latest' ||
       matrix.platform == 'macos' && 'macos-latest' ||
       'ubuntu-latest' }}
+    env:
+      # Android 构建所需的环境变量
+      KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+      KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
     steps:
       # 拉取代码
       - name: Checkout code
@@ -68,6 +72,15 @@ jobs:
         run: |
           cd app
           flutter pub run build_runner build --delete-conflicting-outputs
+
+      # 调试环境变量（仅在 Android 构建时显示）
+      - name: Debug Environment Variables
+        if: matrix.platform == 'android'
+        run: |
+          echo "检查 Android 构建环境变量："
+          echo "KEYSTORE_PASSWORD is set: $([ -n "$KEYSTORE_PASSWORD" ] && echo "✅ Yes" || echo "❌ No")"
+          echo "KEY_PASSWORD is set: $([ -n "$KEY_PASSWORD" ] && echo "✅ Yes" || echo "❌ No")"
+          echo "注意：出于安全考虑，不会显示密码值"
 
       # 构建
       - name: Flutter Build
