优化 NSIS 安装脚本路径查找逻辑
- 在 GitHub Actions 工作流中，尝试多个可能的 NSIS 路径以增强容错性
- 添加错误处理，提供更详细的用户提示信息
- 确保在未找到 NSIS 时，输出尝试的路径以便于调试

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -182,18 +182,32 @@ jobs:
           }
           
           # 编译 NSIS 安装脚本
-          # 尝试使用完整路径
-          $nsisExe = "C:\Program Files (x86)\NSIS\makensis.exe"
-          if (Test-Path $nsisExe) {
-            & $nsisExe "../platforms/windows/installer.nsi"
-          } else {
-            # 尝试从 PATH 中查找
-            $nsisPath = Get-Command makensis -ErrorAction SilentlyContinue
-            if ($nsisPath) {
-              & makensis "../platforms/windows/installer.nsi"
-            } else {
-              Write-Host "NSIS 未找到，跳过安装包创建"
-              exit 1
+          # 尝试多个可能的 NSIS 路径
+          $nsisPaths = @(
+            "C:\Program Files (x86)\NSIS\makensis.exe",
+            "C:\Program Files\NSIS\makensis.exe",
+            "makensis.exe"
+          )
+          
+          $nsisFound = $false
+          foreach ($nsisPath in $nsisPaths) {
+            if (Test-Path $nsisPath) {
+              Write-Host "找到 NSIS: $nsisPath"
+              try {
+                & $nsisPath "../platforms/windows/installer.nsi"
+                $nsisFound = $true
+                break
+              } catch {
+                Write-Host "NSIS 执行失败: $($_.Exception.Message)"
+              }
+            }
+          }
+          
+          if (-not $nsisFound) {
+            Write-Host "NSIS 未找到或执行失败，跳过安装包创建"
+            Write-Host "尝试的路径："
+            foreach ($path in $nsisPaths) {
+              Write-Host "  - $path"
             }
           }
           if (Test-Path "nnbdc-setup.exe") {
