--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -249,7 +249,7 @@ jobs:
           $VERSION_NUMBER = ($VERSION -split "\+")[0]
           
           # 创建版本信息 JSON
-          $JSON_CONTENT = "[{`"verCode`":$BUILD_NUMBER,`"verName`":`"$VERSION_NUMBER`", `"changes`":[`"修复已知问题，提升稳定性`"]}]"
+          $JSON_CONTENT = "[{`"verCode`":$BUILD_NUMBER,`"verName`":`"$VERSION_NUMBER`", `"changes`":[`"Bug fixes and stability improvements`"]}]"
           $JSON_CONTENT | Out-File -FilePath "ver.json" -Encoding UTF8
           
           # 复制版本信息文件到部署目录
