优化版本信息更新逻辑
- 修改 GitHub Actions 工作流中的版本信息更新逻辑，使用 `Contains` 方法替代 `-match`，提高代码可读性
- 确保在读取版本信息时更加准确，避免潜在的匹配错误

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -250,7 +250,7 @@ jobs:
           
           # 更新版本信息文件
           Write-Host "更新版本信息文件..."
-          $VERSION_LINE = Get-Content "../app/pubspec.yaml" | Where-Object { $_ -match "version:" }
+          $VERSION_LINE = Get-Content "../app/pubspec.yaml" | Where-Object { $_.Contains("version:") }
           $VERSION = ($VERSION_LINE -split " ")[1]
           $BUILD_NUMBER = ($VERSION -split "\+")[1]
           $VERSION_NUMBER = ($VERSION -split "\+")[0]
