修复 Windows 步骤 ver.json 生成方式\n\n- 使用 PowerShell 对象 + ConvertTo-Json，避免字符串格式化出错\n- 显式转换 verCode 为整型，确保 JSON 数值类型正确

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -192,8 +192,11 @@ jobs:
           $BUILD_NUMBER = ($VERSION -split "\+")[1]
           $VERSION_NUMBER = ($VERSION -split "\+")[0]
 
-          $JSON_CONTENT = '[{"verCode":{0},"verName":"{1}","changes":["修复已知问题，提升稳定性"]}]' -f $BUILD_NUMBER, $VERSION_NUMBER
-          $JSON_CONTENT | Out-File -FilePath "ver.json" -Encoding UTF8
+          $verCode = [int]$BUILD_NUMBER
+          $verName = $VERSION_NUMBER
+          $changes = @("修复已知问题，提升稳定性")
+          $payload = @(@{ verCode = $verCode; verName = $verName; changes = $changes })
+          $payload | ConvertTo-Json -Depth 3 -Compress | Out-File -FilePath "ver.json" -Encoding UTF8
 
           if (Test-Path "ver.json") { Copy-Item "ver.json" "$DEPLOY_DIR/ver.json" -Force; Write-Host "版本信息已更新: $VERSION_NUMBER ($BUILD_NUMBER)" }
         shell: pwsh
