--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -236,20 +236,15 @@ jobs:
             # 创建 Linux AppImage
             echo "开始创建 Linux AppImage..."
             chmod +x platforms/linux/create_linux_appimage.sh
-            set +e  # 允许脚本失败后继续
             ./platforms/linux/create_linux_appimage.sh
-            APPIMAGE_EXIT_CODE=$?
-            set -e  # 恢复错误检测
             
-            if [ -f "nnbdc-linux.AppImage" ] && [ $APPIMAGE_EXIT_CODE -eq 0 ]; then
+            if [ -f "nnbdc-linux.AppImage" ]; then
               mv nnbdc-linux.AppImage "$DEPLOY_DIR/nnbdc-linux.AppImage"
               echo "Linux AppImage 创建成功: nnbdc-linux.AppImage"
               echo "文件大小: $(du -h "$DEPLOY_DIR/nnbdc-linux.AppImage" | cut -f1)"
             else
-              echo "Linux AppImage 创建失败，回退到 TAR.GZ 格式"
-              cd app/build/linux/x64/release/bundle
-              tar -czf "$DEPLOY_DIR/nnbdc-linux.tar.gz" .
-              echo "TAR.GZ 包创建成功: nnbdc-linux.tar.gz"
+              echo "错误：Linux AppImage 创建失败"
+              exit 1
             fi
           fi
           
