增强部署步骤日志输出和错误检查\n\n- 添加详细日志输出，便于排查部署问题\n- 检查 SSH 密钥是否配置\n- 测试 SSH 连接并显示上传文件列表\n- 使用 -v 参数显示 scp 详细信息

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -279,7 +279,7 @@ jobs:
           echo "版本信息已更新: $VERSION_NUMBER ($BUILD_NUMBER)"
         shell: bash
 
-      # 部署到服务器（如果 SSH 密钥未配置，此步骤会失败但不影响整体构建）
+      # 上传到服务器（如果 SSH 密钥未配置，此步骤会失败但不影响整体构建）
       - name: Deploy to Server
         continue-on-error: true
         env:
@@ -288,17 +288,35 @@ jobs:
           SERVER_USER: root
           SERVER_PORT: 22
         run: |
+          echo "=== 开始部署到服务器 ==="
+          
+          # 检查 SSH 密钥是否配置
+          if [ -z "$SSH_PRIVATE_KEY" ]; then
+            echo "⚠️ SSH 密钥未配置，跳过部署"
+            exit 0
+          fi
+          
           # 配置 SSH
           mkdir -p ~/.ssh
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -p $SERVER_PORT -H $SERVER_HOST >> ~/.ssh/known_hosts
           
+          # 测试 SSH 连接
+          echo "测试 SSH 连接..."
+          ssh -p $SERVER_PORT -o ConnectTimeout=10 $SERVER_USER@$SERVER_HOST "echo 'SSH 连接成功'"
+          
           # 确保服务器目录存在
+          echo "确保服务器目录存在..."
           ssh -p $SERVER_PORT $SERVER_USER@$SERVER_HOST "mkdir -p /var/www/html/app/latest"
           
+          # 列出要上传的文件
+          echo "准备上传的文件："
+          ls -lh deploy/
+          
           # 上传文件到服务器
-          scp -P $SERVER_PORT deploy/* $SERVER_USER@$SERVER_HOST:/var/www/html/app/latest/
+          echo "开始上传文件..."
+          scp -v -P $SERVER_PORT deploy/* $SERVER_USER@$SERVER_HOST:/var/www/html/app/latest/
           
           echo "✅ 部署完成！文件已上传到 $SERVER_HOST:/var/www/html/app/latest/"
         shell: bash
