修改部署步骤错误处理策略
- 将部署步骤的 continue-on-error 设置从 true 修改为 false，确保在发生错误时构建过程能够及时终止
- 这样可以提高错误检测的准确性，避免潜在的部署问题未被及时发现

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -281,7 +281,7 @@ jobs:
 
       # 上传到服务器（如果 SSH 密钥未配置，此步骤会失败但不影响整体构建）
       - name: Deploy to Server
-        continue-on-error: true
+        continue-on-error: false
         env:
           SSH_PRIVATE_KEY: ${{ secrets.DEPLOY_SSH_KEY }}
           SERVER_HOST: 47.108.27.205
