--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -281,42 +281,70 @@ jobs:
 
       # 上传到服务器（如果 SSH 密钥未配置，此步骤会失败但不影响整体构建）
       - name: Deploy to Server
-        continue-on-error: false
+        continue-on-error: true
         env:
           SSH_PRIVATE_KEY: ${{ secrets.DEPLOY_SSH_KEY }}
           SERVER_HOST: 47.108.27.205
           SERVER_USER: root
           SERVER_PORT: 22
         run: |
+          set -e  # 遇到错误立即退出
           echo "=== 开始部署到服务器 ==="
           
           # 检查 SSH 密钥是否配置
           if [ -z "$SSH_PRIVATE_KEY" ]; then
-            echo "⚠️ SSH 密钥未配置，跳过部署"
-            exit 0
+            echo "❌ 错误：SSH 密钥未配置，请检查 GitHub Secrets 中是否配置了 DEPLOY_SSH_KEY"
+            echo "部署已跳过"
+            exit 1
           fi
+          
+          echo "✅ SSH 密钥已配置，开始配置 SSH 环境..."
           
           # 配置 SSH
           mkdir -p ~/.ssh
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -p $SERVER_PORT -H $SERVER_HOST >> ~/.ssh/known_hosts
+          ssh-keyscan -p $SERVER_PORT -H $SERVER_HOST >> ~/.ssh/known_hosts 2>&1
           
           # 测试 SSH 连接
           echo "测试 SSH 连接..."
-          ssh -p $SERVER_PORT -o ConnectTimeout=10 $SERVER_USER@$SERVER_HOST "echo 'SSH 连接成功'"
+          if ! ssh -p $SERVER_PORT -o ConnectTimeout=10 -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_HOST "echo 'SSH 连接成功'"; then
+            echo "❌ SSH 连接失败"
+            exit 1
+          fi
           
           # 确保服务器目录存在
           echo "确保服务器目录存在..."
-          ssh -p $SERVER_PORT $SERVER_USER@$SERVER_HOST "mkdir -p /var/www/html/app/latest"
+          if ! ssh -p $SERVER_PORT -o ConnectTimeout=10 $SERVER_USER@$SERVER_HOST "mkdir -p /var/www/html/app/latest"; then
+            echo "❌ 创建服务器目录失败"
+            exit 1
+          fi
           
           # 列出要上传的文件
           echo "准备上传的文件："
+          if [ ! -d "deploy" ]; then
+            echo "❌ deploy 目录不存在"
+            exit 1
+          fi
           ls -lh deploy/
+          
+          # 检查是否有文件需要上传
+          FILE_COUNT=$(ls -1 deploy/ | wc -l)
+          if [ "$FILE_COUNT" -eq 0 ]; then
+            echo "❌ deploy 目录为空，没有文件需要上传"
+            exit 1
+          fi
           
           # 上传文件到服务器
           echo "开始上传文件..."
-          scp -v -P $SERVER_PORT deploy/* $SERVER_USER@$SERVER_HOST:/var/www/html/app/latest/
+          if ! scp -v -P $SERVER_PORT -r deploy/* $SERVER_USER@$SERVER_HOST:/var/www/html/app/latest/; then
+            echo "❌ 文件上传失败"
+            exit 1
+          fi
+          
+          # 验证文件是否上传成功
+          echo "验证文件是否上传成功..."
+          ssh -p $SERVER_PORT $SERVER_USER@$SERVER_HOST "ls -lh /var/www/html/app/latest/"
           
           echo "✅ 部署完成！文件已上传到 $SERVER_HOST:/var/www/html/app/latest/"
         shell: bash
