添加CDN管理相关功能及API
- 在RestClient中添加CDN缓存刷新的API
- 更新AdminPage，添加CDN管理入口
- 在SystemController中实现CDN缓存刷新逻辑
- 更新pom.xml，添加阿里云CDN依赖
- 在application.yml中添加CDN配置项

--- a/server/nnbdc-service/pom.xml
+++ b/server/nnbdc-service/pom.xml
@@ -133,6 +133,12 @@
             <groupId>com.aliyun</groupId>
             <artifactId>aliyun-java-sdk-dysmsapi</artifactId>
         </dependency>
+        
+        <!-- 阿里云CDN服务 -->
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>aliyun-java-sdk-cdn</artifactId>
+        </dependency>
 
         <!-- OkHttp - 用于微信登录API调用 -->
         <dependency>
