--- a/server/pom.xml
+++ b/server/pom.xml
@@ -161,6 +161,11 @@
                 <artifactId>aliyun-java-sdk-dysmsapi</artifactId>
                 <version>2.2.1</version>
             </dependency>
+            <dependency>
+                <groupId>com.aliyun</groupId>
+                <artifactId>aliyun-java-sdk-cdn</artifactId>
+                <version>3.1.0</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
