--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,13 +68,7 @@ jobs:
           cd app
           flutter pub get
 
-      # 生成代码（Retrofit API、JSON 序列化、Drift 数据库）
-      - name: Generate Code
-        run: |
-          cd app
-          flutter pub run build_runner build --delete-conflicting-outputs
-
-      # 修改配置文件为生产环境
+      # 修改配置文件为生产环境（在代码生成之前）
       - name: Set Production Profile (Linux/macOS)
         if: matrix.platform != 'windows'
         run: |
@@ -107,6 +101,12 @@ jobs:
             exit 1
           }
         shell: powershell
+
+      # 生成代码（Retrofit API、JSON 序列化、Drift 数据库）
+      - name: Generate Code
+        run: |
+          cd app
+          flutter pub run build_runner build --delete-conflicting-outputs
 
       # 调试环境变量（仅在 Android 构建时显示）
       - name: Debug Environment Variables
