修改代码生成命令为 Dart 运行时
- 将 GitHub Actions 工作流中的代码生成命令从 Flutter 修改为 Dart，以适应最新的构建工具
- 更新 pubspec.yaml 中的 retrofit_generator 版本至 9.3.0，确保依赖项的兼容性

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,7 +106,7 @@ jobs:
       - name: Generate Code
         run: |
           cd app
-          flutter pub run build_runner build --delete-conflicting-outputs
+          dart run build_runner build --delete-conflicting-outputs
 
       # 调试环境变量（仅在 Android 构建时显示）
       - name: Debug Environment Variables
