优化 GitHub Actions 工作流中的 sed 命令适配
- 根据操作系统类型调整 sed 命令，确保在 macOS 和 Linux 上均能正确执行
- 添加注释说明不同操作系统的处理方式，提升代码可读性

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,7 +73,12 @@ jobs:
         if: matrix.platform != 'windows'
         run: |
           cd app
-          sed -i 's/static String profileName = ".*"/static String profileName = "prod"/' lib/config.dart
+          # macOS 需要 sed -i ''，Linux 需要 sed -i，根据操作系统选择
+          if [[ "${{ runner.os }}" == "macOS" ]]; then
+            sed -i '' 's/static String profileName = ".*"/static String profileName = "prod"/' lib/config.dart
+          else
+            sed -i 's/static String profileName = ".*"/static String profileName = "prod"/' lib/config.dart
+          fi
           echo "已设置 profileName 为 prod"
           # 验证修改是否成功
           if grep -q 'profileName = "prod"' lib/config.dart; then
